Sidebar desktop bar for monitor is now centered; prevent sidebar overlap with topbar

--- a/src/AppRouter.css
+++ b/src/AppRouter.css
@@ -31,7 +31,7 @@ body {
 
 .Sidebar {
   width: 33% !important;
-  top: 6.5% !important;
+  top: 55px !important;
   z-index: 2 !important;
 }
 
