--- a/src/Navbars/TopbarPhone/TopbarPhone.css
+++ b/src/Navbars/TopbarPhone/TopbarPhone.css
@@ -1,14 +1,14 @@
 .Topbar-Phone {
   position: absolute;
   background-color: rgba(0, 0, 0, 0) !important;
-  z-index: 9999;
+  z-index: 9999 !important;
   width: 100%;
   border-radius: 0% !important;
 }
 
 .Topbar-Phone.Scrolled {
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
   top: -100%;
   transition: top 0.5s !important;
 }
